syntax = "proto3";

package userManagement;

option go_package = "/";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

service UserService{
  rpc AddUser(UserCreateRequest) returns (UserIdResponse);
  rpc GetUser(UserGetRequest) returns (User);
  rpc ListUsers(UserGetAllRequest) returns (UserGetAllResponse);
}

message UserCreateRequest {
  string name = 1;
  string email = 2;
}

message UserIdResponse{
  int32 id = 1;
}

message UserGetRequest{
  int32 id = 1;
}

message UserGetAllRequest{}

message UserGetAllResponse{
  repeated User users = 1;
}

